# OracReasoningEngine

./: .gitignore  .replit  LICENSE  Procfile  README.md  app.py  dev_notes.txt  error_handlers.py  heuristics.json  heuristics_config.py  main.py  migrations.py  models.py  pyproject.toml  query_parser.py  routes.py  routing_and_logic.py  rules.py  rules_DEMO.py  scenario_parser.py  simulation.py  test_heuristics.py  utilities.py
migrations/: env.py
migrations/versions/: 38e8df194b3d_initial_migration.py
static/css/: style.css
static/js/: main.js  websocket.js
templates/: base.html  login.html  register.html  simulator.html
templates/admin/: users.html
templates/errors/: 401.html  403.html  404.html  500.html
tests/: test_routing.py  test_simulation.py
