[project]
name = "Orac Reasoning Engine"
version = "0.1.0"
description = "An LLM Reasoning Engine designed to solve problems in low / no data domains"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.0",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.59.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "eventlet>=0.38.2",
    "oauthlib>=3.2.2",
    "flask-migrate>=4.1.0",
]
